kubectl-playground/sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
spec:
  selector:
    matchLabels:
      app: sample
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - name: sample-container
          image: arkadius/sample-service:1.0
          ports:
            - containerPort: 9000
