kubectl-playground/sample-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    app: sample
spec:
  containers:
    - name: sample-container
      image: arkadius/sample-service:1.0
      ports:
        - containerPort: 9000
      startupProbe:
        tcpSocket:
          port: 9000
        initialDelaySeconds: 5
        periodSeconds: 5
        failureThreshold: 20
      livenessProbe:
        tcpSocket:
          port: 9000
        initialDelaySeconds: 5
        periodSeconds: 5
